added update user tags
