# docs/swagger.yaml
@@ -3,21 +3,43 @@ definitions:
   dto.CreateUserDTO:
     properties:
       age:
+        maximum: 100
+        minimum: 0
         type: integer
       description:
+        maxLength: 100
+        minLength: 2
         type: string
       image_url:
         type: string
       interests:
+        maxLength: 100
+        minLength: 2
         type: string
       password:
+        maxLength: 100
+        minLength: 8
         type: string
       rating:
+        maximum: 100
+        minimum: 0
         type: integer
       type:
+        maxLength: 100
+        minLength: 2
         type: string
       username:
+        maxLength: 100
+        minLength: 2
         type: string
+    required:
+    - age
+    - description
+    - interests
+    - password
+    - rating
+    - type
+    - username
     type: object
   dto.UserResponseDTO:
     properties:
@@ -37,6 +59,20 @@ definitions:
         type: string
       username:
         type: string
+    type: object
+  dto.UserUpdateDTO:
+    properties:
+      tags:
+        maxLength: 100
+        minLength: 4
+        type: string
+      username:
+        maxLength: 100
+        minLength: 2
+        type: string
+    required:
+    - tags
+    - username
     type: object
 host: localhost:5000
 info:
@@ -73,6 +109,31 @@ paths:
         "500":
           description: Internal Server Error
       summary: Get users
+      tags:
+      - users
+    patch:
+      consumes:
+      - application/json
+      description: Updating user tags with given username and tags
+      parameters:
+      - description: User Update
+        in: body
+        name: userUpdate
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserUpdateDTO'
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      summary: Update user tags
       tags:
       - users
     post:
